# GMockX

./: .gitignore  CMakeLists.txt  README.md  gmockx.hpp  gtestx.hpp  main.cpp
Example/: DependencyClient.cpp  DependencyClient.hpp  DependencyClientTestSuite.cpp  SolidDependency.cpp  SolidDependency.hpp  SolidDependencyMock.cpp  SolidDependencyMock.hpp
Tests/: MockListTest.cpp  MocksTest.cpp
